# polygnn

./: .gitignore  LICENSE  README.md  example.py  example2.py  pyproject.toml
more_examples/: example_predict.py  example_predict_gas.py  example_predict_trained_models.py  example_predict_trained_models_w_fps.py
polygnn/: __init__.py  constants.py  featurize.py  infer.py  layers.py  loss.py  models.py  std_module.py  trimer.py  utils.py
polygnn/diff/: __init__.py  diff.py
sample_data/: predict_gas_example.csv  sample.csv
tests/: test_polygnn.py  test_trained_models.py  utils_test.py
trained_models/electronic/metadata/: hyperparams.txt  properties.txt  scalers.json  selectors.json
trained_models/electronic/models/: model_0.pt  model_1.pt  model_2.pt  model_3.pt  model_4.pt
trained_models/gas_permeability/metadata/: hyperparams.pkl  properties.txt  scalers.pkl  selectors.pkl
trained_models/gas_permeability/models/: model_0.pt  model_1.pt  model_2.pt  model_3.pt  model_4.pt
trained_models/mechanical/metadata/: hyperparams.txt  properties.txt  scalers.json  selectors.json
trained_models/mechanical/models/: model_0.pt  model_1.pt  model_2.pt  model_3.pt  model_4.pt
trained_models/optical_and_dielectric/metadata/: hyperparams.txt  properties.txt  scalers.json  selectors.json
trained_models/optical_and_dielectric/models/: model_0.pt  model_1.pt  model_2.pt  model_3.pt  model_4.pt
trained_models/solubility_and_permeability/metadata/: features.txt  hyperparams.txt  properties.txt  scalers.json  selectors.json
trained_models/solubility_and_permeability/models/: model_0.pt  model_1.pt  model_2.pt  model_3.pt  model_4.pt
trained_models/thermal/metadata/: features.pkl  hyperparams.txt  properties.txt  scalers.json  selectors.json
trained_models/thermal/models/: model_0.pt  model_1.pt  model_2.pt  model_3.pt  model_4.pt
trained_models/thermodynamic_and_physical/metadata/: hyperparams.txt  properties.txt  scalers.json  selectors.json
trained_models/thermodynamic_and_physical/models/: model_0.pt  model_1.pt  model_2.pt  model_3.pt  model_4.pt
