[tool.poetry]
name = "polygnn"
version = "1.0.1"
description = ""
authors = ["Rishi Gurnani <rgurnani96@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.17"
polygnn-trainer = {git = "https://github.com/rishigurnani/polygnn_trainer.git", rev = "main"}
polygnn-kit = {git = "https://github.com/rishigurnani/polygnn_kit.git", rev = "main"}
nndebugger = {git = "https://github.com/rishigurnani/nndebugger.git", rev = "main"}
pandas = ">=1.1,<1.2"
rdkit-pypi = "^2021.9.3"
scikit-optimize = "^0.9.0"
ipykernel = "^6.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.12b0"
wheel = "^0.37.1"
poethepoet = "^0.10.0"
click = "8.0.2"

[tool.poe.tasks]
torch-osx = "pip install torch==1.9.1 torchvision==0.10.1 torchaudio==0.9.1"
pyg-osx = "pip install https://data.pyg.org/whl/torch-1.9.0%2Bcpu/torch_scatter-2.0.9-cp37-cp37m-macosx_10_14_x86_64.whl https://data.pyg.org/whl/torch-1.9.0%2Bcpu/torch_sparse-0.6.12-cp37-cp37m-macosx_10_14_x86_64.whl torch-geometric"
torch-linux_win-cuda102 = "pip install torch==1.12.1+cu102 torchvision==0.13.1+cu102 torchaudio==0.12.1 --extra-index-url https://download.pytorch.org/whl/cu102"
pyg-linux_win-cuda102 = "pip install https://data.pyg.org/whl/torch-1.12.0%2Bcu102/torch_scatter-2.1.0%2Bpt112cu102-cp37-cp37m-linux_x86_64.whl https://data.pyg.org/whl/torch-1.12.0%2Bcu102/torch_sparse-0.6.16%2Bpt112cu102-cp37-cp37m-linux_x86_64.whl torch_geometric"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
